kube/service-mkruna.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkruna
spec:
  type: ClusterIP
  ports:
  - name: mkruna-svc-port
    port: 81
    targetPort: mkruna-port
    protocol: TCP
  selector:
    app: mkruna
