kube/ingress-mkruna.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mkruna
  namespace: mkruna
  annotations:
      cert-manager.io/issuer: "letsencrypt-mkruna"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mkruna.lines14.site
    secretName: letsencrypt-mkruna
  rules:
  - host: mkruna.lines14.site
    http:
      paths:
      - path: /?(.*)
        pathType: Exact
        backend:
          service:
            name: mkruna
            port:
              number: 81
